# shoppy-telegram-bot

./: .dockerignore  .gitignore  README.md  database.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml
.github/: README.md
