# pyproject.toml

[project]
name = "shoppy-telegram-bot"
version = "1.0.0"
description = "A collaborative shopping list bot for Telegram."
authors = [
    { name = "Leo Grund", email = "leogrund10@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot",
    "python-dotenv"

]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
shoppy-telegram-bot = "shoppy_telegram_bot.main:main"